--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -42,9 +42,9 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}/${{ inputs.name }}
           tags: |
-            type=semver,pattern={{version}},value=${{ steps.app_version.version }}
-            type=semver,pattern={{major}}.{{minor}},value=${{ steps.app_version.version }}
-            type=semver,pattern={{major}},value=${{ steps.app_version.version }}
+            type=semver,pattern={{version}},value=${{ steps.app_version.outputs.version }}
+            type=semver,pattern={{major}}.{{minor}},value=${{ steps.app_version.outputs.version }}
+            type=semver,pattern={{major}},value=${{ steps.app_version.outputs.version }}
             type=ref,event=branch
             type=sha
       - name: Set up QEMU
@@ -61,8 +61,8 @@ jobs:
           context: ${{ inputs.path }}
           file: ${{ inputs.path }}/${{ inputs.containerfile }}
           push: true
-          build-args:
-            - APP_VERSION=${{ steps.app_version.version }}
+          build-args: |
+            APP_VERSION=${{ steps.app_version.outputs.version }}
           annotations: ${{ steps.meta.outputs.annotations }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
