--- a/nextcloud/Containerfile
+++ b/nextcloud/Containerfile
@@ -50,8 +50,8 @@ WORKDIR /var/www/html
 
 # set recommended PHP.ini settings
 # see https://docs.nextcloud.com/server/stable/admin_manual/configuration_server/server_tuning.html#enable-php-opcache
-ARG PHP_MEMORY_LIMIT=512M
-ARG PHP_UPLOAD_LIMIT=1024M
+ENV PHP_MEMORY_LIMIT=512M
+ENV PHP_UPLOAD_LIMIT=1024M
 RUN { \
         echo 'opcache.enable=1'; \
         echo 'opcache.interned_strings_buffer=64'; \
