nextcloud: Install php82-sysvsem

--- a/nextcloud/Containerfile
+++ b/nextcloud/Containerfile
@@ -31,6 +31,7 @@ RUN set -ex; \
         php82-posix \
         php82-session \
         php82-simplexml \
+        php82-sysvsem \
         php82-xml \
         php82-xmlreader \
         php82-xmlwriter \
