--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -9,7 +9,7 @@ on:
       path:
         type: string
         required: true
-      containerfile:
+      file:
         type: string
         default: "Containerfile"
       platforms:
@@ -36,8 +36,9 @@ jobs:
         run: |
           content=`cat ./${{ inputs.path }}/APP_VERSION`
           echo "version=$content" >> $GITHUB_OUTPUT
-      - name: Extract metadata (tags, labels) for Docker
+      - name: Extract metadata (tags, labels) with APP_VERSION for Docker
         id: meta
+        if: ${{ github.event.ref_name == github.event.repository.default_branch }}
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}/${{ inputs.name }}
@@ -47,6 +48,12 @@ jobs:
             type=semver,pattern={{major}},value=${{ steps.app_version.outputs.version }}
             type=ref,event=branch
             type=sha
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        if: ${{ github.event.ref_name != github.event.repository.default_branch }}
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}/${{ inputs.name }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
@@ -59,7 +66,7 @@ jobs:
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: ${{ inputs.path }}
-          file: ${{ inputs.path }}/${{ inputs.containerfile }}
+          file: ${{ inputs.path }}/${{ inputs.file }}
           push: true
           build-args: |
             APP_VERSION=${{ steps.app_version.outputs.version }}
