--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -36,8 +36,9 @@ jobs:
         run: |
           content=`cat ./${{ inputs.path }}/APP_VERSION`
           echo "version=$content" >> $GITHUB_OUTPUT
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
+      - name: Extract metadata (tags, labels) with APP_VERSION for Docker
+        id: meta-version
+        if: github.ref_name == github.event.repository.default_branch
         uses: docker/metadata-action@v5
         with:
           images: ghcr.io/${{ github.repository }}/${{ inputs.name }}
@@ -47,6 +48,11 @@ jobs:
             type=semver,pattern={{major}},value=${{ steps.app_version.outputs.version }}
             type=ref,event=branch
             type=sha
+      - name: Extract metadata (tags, labels) for Docker
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository }}/${{ inputs.name }}
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
         with:
@@ -63,9 +69,9 @@ jobs:
           push: true
           build-args: |
             APP_VERSION=${{ steps.app_version.outputs.version }}
-          annotations: ${{ steps.meta.outputs.annotations }}
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          annotations: ${{ github.ref_name == github.event.repository.default_branch && steps.meta-version.outputs.annotations || steps.meta.outputs.annotations }}
+          tags: ${{ github.ref_name == github.event.repository.default_branch && steps.meta-version.outputs.tags || steps.meta.outputs.tags }}
+          labels: ${{ github.ref_name == github.event.repository.default_branch && steps.meta-version.outputs.labels || steps.meta.outputs.labels }}
           platforms: ${{ inputs.platforms }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
