--- a/nextcloud/Containerfile
+++ b/nextcloud/Containerfile
@@ -46,14 +46,13 @@ RUN set -ex; \
         php82-pecl-memcached \
         php82-pecl-imagick \
         php82-pecl-redis; \
-    ln -sf /usr/bin/php82 /usr/bin/php
+    ln -sf /usr/bin/php82 /usr/bin/php; \
+    ln -sf /usr/sbin/php-fpm82 /usr/sbin/php-fpm;
 
 RUN set -ex; \
-    mkdir -p /var/www/html; \
-    groupmod -g 101 www-data; \
-    adduser -h /var/www/html -H -s /sbin/nologin -S -u 101 -G www-data www-data
-
-WORKDIR /var/www/html
+    mkdir -p /var/www/nextcloud; \
+    groupmod -g 101 -o www-data; \
+    adduser -h /var/www/nextcloud -H -s /sbin/nologin -S -u 101 -G www-data www-data
 
 # set recommended PHP.ini settings
 # see https://docs.nextcloud.com/server/stable/admin_manual/installation/server_tuning.html#enable-php-opcache
@@ -61,11 +60,6 @@ ENV PHP_MEMORY_LIMIT=512M
 ENV PHP_UPLOAD_LIMIT=1024M
 COPY php.conf.d/ /etc/php82/conf.d/
 COPY php-fpm.d/ /etc/php82/php-fpm.d/
-RUN rm /var/spool/cron/crontabs/root; \
-    echo '*/5 * * * * php82 -f /var/www/html/cron.php' > /var/spool/cron/crontabs/www-data; \
-    \
-    chown -R www-data:www-data /var/www; \
-    chmod -R g=u /var/www
 
 ENV NEXTCLOUD_VERSION=${APP_VERSION}
 
@@ -78,19 +72,28 @@ RUN set -ex; \
     # gpg key from https://nextcloud.com/nextcloud.asc
     gpg --batch --keyserver keyserver.ubuntu.com  --recv-keys 28806A878AE423A28372792ED75899B9A724937A; \
     gpg --batch --verify nextcloud.tar.bz2.asc nextcloud.tar.bz2; \
-    mkdir -p /usr/src; \
-    tar -xjf nextcloud.tar.bz2 -C /usr/src/; \
+    tar -xjf nextcloud.tar.bz2 -C /var/www/; \
     gpgconf --kill all; \
     rm nextcloud.tar.bz2.asc nextcloud.tar.bz2; \
-    rm -rf "$GNUPGHOME" /usr/src/nextcloud/updater; \
-    mkdir -p /usr/src/nextcloud/data; \
-    mkdir -p /usr/src/nextcloud/custom_apps; \
-    chmod +x /usr/src/nextcloud/occ;
+    rm -rf "$GNUPGHOME"; \
+    mkdir -p /var/www/nextcloud/data; \
+    mkdir -p /var/www/nextcloud/custom_apps; \
+    chmod +x /var/www/nextcloud/occ; \
+    chown -R www-data:www-data /var/www; \
+    chmod -R g=u /var/www; \
+    # Setup cronjob
+    rm /var/spool/cron/crontabs/root; \
+    echo '*/5 * * * * php -f /var/www/nextcloud/cron.php' > /var/spool/cron/crontabs/www-data;
 
-COPY entrypoint.sh upgrade.sh upgrade.exclude /
-COPY config/* /usr/src/nextcloud/config/
+COPY entrypoint.sh upgrade.sh /
+COPY config/* /usr/share/nextcloud/config/
 
-VOLUME /var/www/html
+WORKDIR /var/www/nextcloud
+
+VOLUME /var/www/nextcloud/data
+VOLUME /var/www/nextcloud/custom_apps
+VOLUME /var/www/nextcloud/config
+VOLUME /var/www/nextcloud/themes
 
 ENTRYPOINT ["/entrypoint.sh"]
-CMD ["php-fpm82", "-F"]
+CMD ["php-fpm", "-F"]
