--- a/.github/workflows/package-nextcloud.yml
+++ b/.github/workflows/package-nextcloud.yml
@@ -14,11 +14,11 @@ jobs:
   package-nextcloud:
     uses: "./.github/workflows/package.yml"
     with:
-      name: nextcloud
+      name: nextcloud-fpm
       path: nextcloud
   package-nginx:
     uses: "./.github/workflows/package.yml"
     with:
-      name: nextcloud
+      name: nextcloud-nginx
       file: Containerfile-nginx
       path: nextcloud
