--- a/nextcloud/nginx.conf
+++ b/nextcloud/nginx.conf
@@ -52,7 +52,8 @@ http {
         add_header Strict-Transport-Security "max-age=15768000; includeSubDomains" always;
 
         # set max upload size and increase upload timeout:
-        client_max_body_size 16G;
+        proxy_buffering off;
+        client_max_body_size 0;
         client_body_timeout 300s;
         fastcgi_buffers 64 4K;
 
