nextcloud: Fix Nginx regex

--- a/nextcloud/nginx.conf
+++ b/nextcloud/nginx.conf
@@ -35,17 +35,17 @@ http {
     }
 
     map $status $probe_status_logging {
-        ~^[23]\d{2}     0;                      # 2XX or 3XX indicates success Kubernetes HTTP probe
+        "~^[23]\d{2}$"  0;                      # 2XX or 3XX indicates success Kubernetes HTTP probe
         default         1;                      # Log failure probe requests
     }
     # Map to determine if the request should be logged
     map $http_user_agent $probe_logging {
-        ~^kube-probe    $probe_status_logging;  # User-Agent matched, do further status check
+        "~^kube-probe"  $probe_status_logging;  # User-Agent matched, do further status check
         default         1;
     }
 
-    access_log /var/log/nginx/access.log    if=$probe_logging
-    access_log /dev/stdout                  if=$probe_logging
+    access_log /var/log/nginx/access.log combined if=$probe_logging;
+    access_log /dev/stdout               combined if=$probe_logging;
 
     server {
         listen 80 default_server;
