--- a/nextcloud/nginx.conf
+++ b/nextcloud/nginx.conf
@@ -6,6 +6,9 @@ error_log  stderr warn;
 error_log  /var/log/nginx/error.log notice;
 pid        /var/run/nginx/nginx.pid;
 
+# Includes files with directives to load dynamic modules.
+include /etc/nginx/modules/*.conf;
+
 events {
     worker_connections  1024;
 }
