use APP_VERSION

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,6 +49,7 @@ jobs:
           build-args: |
             VERSION=${{ github.head_ref || github.ref_name }}
             COMMIT=${{ github.sha }}
+            APP_VERSION=${{ env.APP_VERSION }} # Pass the APP_VERSION from the file
 
       - name: Inspect Docker image
         run: docker image inspect ${{ steps.meta.outputs.tags }}
