--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,47 +1,70 @@
-name: Build Docker image
+name: Publish Docker image
 
 on:
   push:
     branches:
-      - main
-  pull_request:
+      - master
+    tags:
+      - 'v*.*.*'
 
 env:
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build:
+  push_to_registry:
+    name: Push Docker image to GitHub Packages
     runs-on: ubuntu-latest
+    permissions:
+      packages: write
+      contents: read
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup QEMU
-        uses: docker/setup-qemu-action@v3
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@v3
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@5964de0df58d5ad28b04d8fe2e6b80ad47105b91 # v3.5.0
         with:
-          config: .github/buildkitd.toml
+          platforms: all
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@b5ca514318bd6ebac0fb2aedd5d36ec1b5c232a2 # v3.10.0
+        with:
+          buildkitd-config: .github/buildkitd.toml
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@74a5d142397b4f367a81961eba4e8cd7edddf772 # v3.4.0
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Retrieve author data
+        id: author
         run: |
-          echo AUTHOR=$(curl -sSL ${{ github.event.repository.owner.url }} | jq -r '.name') >> $GITHUB_ENV
+          AUTHOR=$(curl -sSL ${{ github.event.repository.owner.url }} | jq -r '.name')
+          echo "AUTHOR=$AUTHOR" >> $GITHUB_ENV
+
       - name: Extract metadata (tags, labels) for Docker
         id: meta
-        uses: docker/metadata-action@v5
+        uses: docker/metadata-action@902fa8ec7d6ecbf8d84d538b9b233a880e428804 # v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=tag
+            type=sha,prefix=sha-
           labels: |
             org.opencontainers.image.authors=${{ env.AUTHOR }}
-      - name: Read APP_VERSION from file
-        id: app_version
-        run: echo "APP_VERSION=$(cat APP_VERSION)" >> $GITHUB_ENV
-      - name: Build Docker image
-        uses: docker/build-push-action@v6
+            org.opencontainers.image.source=${{ github.server_url }}/${{ github.repository }}
+            org.opencontainers.image.created=${{ steps.meta.outputs.created }}
+
+      - name: Build and push container image
+        uses: docker/build-push-action@471d1dc4e07e5cdedd4c2171150001c434f0b7a4 # v6.15.0
         with:
           context: .
-          platforms: linux/amd64
-          push: false
-          load: true
+          platforms: linux/amd64,linux/arm64/v8,linux/arm/v7,linux/ppc64le,linux/s390x
+          push: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
           tags: ${{ steps.meta.outputs.tags }}
@@ -49,7 +72,3 @@ jobs:
           build-args: |
             VERSION=${{ github.head_ref || github.ref_name }}
             COMMIT=${{ github.sha }}
-            APP_VERSION=${{ env.APP_VERSION }}
-
-      - name: Inspect Docker image
-        run: docker image inspect ${{ steps.meta.outputs.tags }}
